# amazon-notify

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.ja.md  README.md  amazon_mail_notifier.py  config.example.json  config.full.example.json  engineering-decisions.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/badges/: coverage.json
.github/workflows/: ci.yml  ghcr.yml  release.yml
amazon_notify/: __init__.py  backoff.py  checkpoint_store.py  cli.py  config.py  discord_client.py  domain.py  errors.py  failover.py  gmail_api.py  gmail_auth.py  gmail_client.py  gmail_source.py  gmail_transient_state.py  health.py  incident_store.py  metrics.py  notification_bridge.py  notifier.py  pipeline.py  retention.py  runtime.py  scenario_harness.py  status.py  streaming_pull.py  text.py  time_utils.py  verify_state.py
amazon_notify/commands/: __init__.py  arguments.py  dispatch.py  health.py  metrics.py  polling.py  reauth.py  retention.py  scenario.py  status.py  streaming.py  verify.py  watch.py
amazon_notify/scenarios/: __init__.py  _checkpoint_interrupt_window.py  _corrupted_middle.py  _enospc.py  _stale_incident_recovery.py  _truncated_jsonl.py
amazon_notify/status/: __init__.py  _builders.py  _collect.py  _doctor.py  _render.py
deployment/systemd/: amazon-notify-alert.env.example  amazon-notify-alert@.service  amazon-notify-fallback.service  amazon-notify-fallback.timer  amazon-notify-pubsub.service  amazon-notify.service  amazon_mail_notifier.service  install-systemd.sh  notify-on-failure.sh
docs/: CI_PUSH_FIXLOG_2026-04-18.en.md  CI_PUSH_FIXLOG_2026-04-18.md  DOCKER.en.md  DOCKER.md  HYBRID_ARCHITECTURE.en.md  HYBRID_ARCHITECTURE_JA.md  HYBRID_QUICKSTART.en.md  HYBRID_QUICKSTART_JA.md  IMPLEMENTATION_RATIONALE.en.md  IMPLEMENTATION_RATIONALE_JA.md  OPERATIONS.en.md  OPERATIONS.md  PORTABILITY_PARAMS.en.md  PORTABILITY_PARAMS_JA.md  README.en.md  README.md  engineering-decisions.en.md  engineering-decisions.md  review-followup-2026-04-18.md
tests/: conftest.py
tests/e2e/: test_full_delivery_recovery_flow.py  test_recovery_flow.py
tests/scenarios/: test_fault_scenarios.py
tests/unit/: notifier_test_helpers.py  test_backoff.py  test_checkpoint_store.py  test_cli_commands.py  test_commands_modules.py  test_config_runtime.py  test_discord_client.py  test_failover.py  test_gmail_client_extra.py  test_metrics_module.py  test_notifier_core.py  test_pipeline_contracts.py  test_review_additions.py  test_runtime.py  test_scenario_harness_module.py  test_scenarios.py  test_status.py  test_streaming_pull.py  test_text_patterns.py  test_time_utils.py  test_token_handling.py  test_verify_state_module.py
