[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-notify"
version = "0.5.0"
description = "Self-hosted Gmail to Discord notifier for Amazon.co.jp shipping emails"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "requests>=2.32.0,<3.0.0",
  "google-api-python-client>=2.120.0,<3.0.0",
  "google-auth>=2.28.0,<3.0.0",
  "google-auth-oauthlib>=1.2.0,<2.0.0",
]

[project.urls]
Repository = "https://github.com/yukimurata0421/amazon-notify"
Changelog = "https://github.com/yukimurata0421/amazon-notify/blob/main/CHANGELOG.md"
Documentation = "https://github.com/yukimurata0421/amazon-notify#readme"
Issues = "https://github.com/yukimurata0421/amazon-notify/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-cov>=5.0.0,<8.0.0",
  "ruff>=0.6.0,<1.0.0",
  "mypy>=1.10.0,<2.0.0",
  "types-requests>=2.32.0.20241016,<3.0.0",
  "time-machine>=2.16.0,<3.0.0",
]
pubsub = [
  "google-cloud-pubsub>=2.25.0,<3.0.0",
]

[project.scripts]
amazon-notify = "amazon_notify.cli:main"

[tool.setuptools]
packages = ["amazon_notify", "amazon_notify.commands"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
"amazon_notify/cli.py" = ["RUF001"]
# Legacy standalone scripts (if present): intentional Japanese full-width punctuation in UI strings/comments.
"amazon_mail_notifier.py" = ["RUF001", "RUF002", "RUF003"]
"amazon_mail_to_discord.py" = ["RUF001", "RUF003"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
exclude = "(^tests/|^build/|^dist/|^.venv/)"
